--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "style guide"
   ],
   "dependencies": {
+    "@ibma/karma-ibma": "^2.2.0",
     "carbon-icons": "^6.0.4",
     "lodash.debounce": "^4.0.8"
   },
   "devDependencies": {
     "adaro": "1.0.4",
+    "autoprefixer": "^7.1.1",
     "babel-core": "^6.22.0",
     "babel-eslint": "^7.0.0",
     "babel-plugin-external-helpers": "^6.22.0",
@@ -47,6 +49,7 @@
     "browser-sync": "~2.10.0",
     "chai": "^3.5.0",
     "core-js": "^2.4.0",
+    "css-loader": "^0.28.4",
     "custom-event": "^1.0.0",
     "cz-conventional-changelog": "^1.2.0",
     "del": "~2.0.2",
@@ -68,7 +71,7 @@
     "gulp-util": "~3.0.7",
     "husky": "^0.12.0",
     "karma": "^1.0.0",
-    "karma-chrome-launcher": "^2.0.0",
+    "karma-chrome-launcher": "^2.1.1",
     "karma-coverage": "^1.1.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-html2js-preprocessor": "^1.1.0",
@@ -87,11 +90,13 @@
     "mocha": "~2.4.4",
     "nodemon": "1.9.1",
     "phantomjs-prebuilt": "^2.1.3",
+    "postcss-loader": "^2.0.5",
     "pump": "^1.0.2",
     "rollup": "^0.41.6",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-filesize": "^1.2.1",
+    "rollup-plugin-hypothetical": "^1.2.1",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-string": "^2.0.0",
     "rollup-plugin-uglify": "^1.0.1",
@@ -99,6 +104,7 @@
     "semantic-release": "^6.3.2",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.9.0",
+    "style-loader": "^0.18.2",
     "validate-commit-msg": "^2.8.2",
     "vinyl-named": "^1.1.0"
   },
